# orca-demo

./: .gitignore  README.md  pyproject.toml
analysis/: config.py  metrics.py  model_training.py  streamlit_app.py
analysis/cache/: training_data.parquet
analysis/models/: metadata.joblib  model_high.joblib  model_low.joblib  model_median.joblib
ingestion/: download_data.py  olist_dlt_pipeline.py
orchestration/: definitions.py
orchestration/assets/: ingestion.py  machine_learning.py  transformation.py
transformation/: dbt_project.yml  profiles.yml
transformation/models/: sources.yml
transformation/models/marts/: dim_customers.sql  dim_products.sql  fct_orders.sql
transformation/models/staging/: stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql  stg_products.sql
